feature: added resources for analysis with docs
